--- a/static/news.css
+++ b/static/news.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Cambria, Georgia, serif;
     padding: 10px;
     text-align: center;
     display: grid;
@@ -13,13 +13,13 @@ body {
     transition: all 0.3s ease;
     background-color: #F9F5ED;
     min-width: 1280px;
-    color: #4e4b9f;
+    color: #311f6b;
 }
 
 html.dark-mode,
 body.dark-mode {
-    background-color: #1E054D;
-    color: #e0e0e0;
+    background-color: #141417;
+    color: #dee4fc;
 }
 
 /* --- Top Bar --- */
@@ -72,14 +72,14 @@ body.dark-mode {
     top: 100px; 
     left: 20px; 
     width: 250px; 
-    background-color: white;
-    border: 1px solid #ccc;
+    background-color: #f0ede7;
+    border: 1px solid #f0ede9;
     border-radius: 8px;
     box-shadow: 0px 2px 10px rgba(0,0,0,0.1);
     padding: 10px;
     display: flex;
     flex-direction: column;
-    gap: 8px; /* spacing between nav links */
+    gap: 8px;
     z-index: 1000;
     transition: transform 0.3s ease, opacity 0.3s ease;
     opacity: 1;
@@ -95,7 +95,8 @@ body.dark-mode {
 }
 
 body.dark-mode #nav {
-    background-color: #2A1C5A;
+    background-color: #222325;
+    border-color: #191a1b;
 }
 
 #nav a {
@@ -104,9 +105,9 @@ body.dark-mode #nav {
 
 #nav a h3 {
     margin: 10px 0;
-    color: #4e4b9f;
+    color: #311f6b;
     text-decoration: none;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Cambria, Georgia, serif;
     font-size: 18px;
     text-align: left;
 }
@@ -116,7 +117,7 @@ body.dark-mode #nav {
 }
 
 body.dark-mode #nav a h3 {
-    color: #e0e0e0;
+    color: #dee4fc;
 }
 
 /* --- News Section --- */
@@ -143,7 +144,7 @@ body.dark-mode #nav a h3 {
 
 /* --- News Items --- */
 .news-item {
-    background-color: #f8f9fa;
+    background-color: #f0ede7;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.1);
@@ -161,7 +162,7 @@ body.dark-mode #nav a h3 {
     margin-top: 10px;
     font-size: 16px;
     text-decoration: none;
-    color: black;
+    color: #311f6b;
 }
 
 /* --- Load More Button --- */
@@ -173,16 +174,16 @@ body.dark-mode #nav a h3 {
 #loadMoreButton {
     padding: 10px 15px;
     font-size: 16px;
-    background-color: black;
-    color: white;
-    border: black 1px;
+    background-color: #f0ede7;
+    color: #311f6b;
+    border: 1px solid #311f6b;
     cursor: pointer;
 }
 
 #loadMoreButton:hover {
-    background-color: black;
-    color: #F2FDFF;
-    border: black 1px;
+    background-color: #222325;
+    color: #dee4fc;
+    border: 1px solid #dee4fc;
 }
 
 .suggestions-box {
@@ -190,11 +191,12 @@ body.dark-mode #nav a h3 {
     top: calc(100% + 4px);
     left: 0;
     width: 100%;
-    background: white;
+    background: #F9F5ED;
     border: 1px solid #ccc;
     z-index: 10000;
     display: none;
     font-size: 16px;
+    text-align: left;
     box-sizing: border-box;
     max-height: 200px;
     overflow-y: auto;
@@ -202,9 +204,16 @@ body.dark-mode #nav a h3 {
     box-shadow: 0px 2px 5px rgba(0,0,0,0.1);
 }
 
+body.dark-mode .suggestions-box {
+    background: #222325;
+    border: 1px solid #191a1b;
+}
+
+
 .suggestion {
     padding: 8px;
     cursor: pointer;
+    text-align: left;
 }
 
 .suggestion:hover {
